# kewkew

./: LICENSE  README.md  kewkew.py  pyproject.toml  setup.py
.github/actions/python-hatch-env/: action.yml
.github/workflows/: draft_release.yml  release.yml  test.yml
examples/: database.py  simple.py
kewkew/: __init__.py  kew.py
tests/: test_key.py
